fix bg bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,10 +49,9 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh; /* altura dinâmica real da viewport */
     z-index: 0;
-    
-    
+
   }
 
   a {
